// Vitest Snapshot v1

exports[`Swiper > Swiper baseVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: row; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    <!-- 导航器 -->
    
    <!--v-if-->
    <span
      class="t-swiper-nav--horizontal t-swiper-nav__dots t-swiper-nav--bottom"
    >
      
      
      <!--v-if-->
    </span>
    
  </div>
</div>
`;

exports[`Swiper > Swiper cardVue demo works fine 1`] = `
<div
  class="t-swiper t-swiper--card"
>
  <div
    class="t-swiper__container"
    style="flex-direction: row; transition: none; height: auto;"
  >
    
    
    <div
      class="t-swiper-item"
      style=""
    >
      
      <img
        class="img"
        src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
      />
      
    </div>
    <div
      class="t-swiper-item"
      style=""
    >
      
      <img
        class="img"
        src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
      />
      
    </div>
    <div
      class="t-swiper-item"
      style=""
    >
      
      <img
        class="img"
        src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
      />
      
    </div>
    <div
      class="t-swiper-item"
      style=""
    >
      
      <img
        class="img"
        src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
      />
      
    </div>
    <div
      class="t-swiper-item"
      style=""
    >
      
      <img
        class="img"
        src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
      />
      
    </div>
    
    
  </div>
  <!-- 导航器 -->
  
  <!--v-if-->
  <span
    class="t-swiper-nav--horizontal t-swiper-nav__dots t-swiper-nav--bottom"
  >
    
    
    <!--v-if-->
  </span>
  
</div>
`;

exports[`Swiper > Swiper controlVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: row; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    <!-- 导航器 -->
    
    <span
      class="t-swiper-nav__btn"
    >
      <span
        class="t-swiper-nav__btn--prev"
      />
      <span
        class="t-swiper-nav__btn--next"
      />
    </span>
    <!--v-if-->
    
  </div>
</div>
`;

exports[`Swiper > Swiper customVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: row; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    <!-- 导航器 -->
    
    <!--v-if-->
    <span
      class="t-swiper-nav--horizontal t-swiper-nav__dots-bar t-swiper-nav--bottom"
    >
      
      
      <!--v-if-->
    </span>
    
  </div>
</div>
`;

exports[`Swiper > Swiper fractionVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: row; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    <!-- 导航器 -->
    
    <!--v-if-->
    <span
      class="t-swiper-nav--horizontal t-swiper-nav__fraction t-swiper-nav--bottom-right"
    >
      <!--v-if-->
      <span>
        1/0
      </span>
    </span>
    
  </div>
</div>
`;

exports[`Swiper > Swiper mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Swiper 轮播
  </h1>
  <p
    class="summary"
  >
    用于循环轮播一组图片或内容，也可以滑动进行切换，轮播动效时间可以设置。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        点状（dots）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: row; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          <!-- 导航器 -->
          
          <!--v-if-->
          <span
            class="t-swiper-nav--horizontal t-swiper-nav__dots t-swiper-nav--bottom"
          >
            
            
            <!--v-if-->
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        条状（dots-bar）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: row; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          <!-- 导航器 -->
          
          <!--v-if-->
          <span
            class="t-swiper-nav--horizontal t-swiper-nav__dots-bar t-swiper-nav--bottom"
          >
            
            
            <!--v-if-->
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        分式（fraction）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: row; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          <!-- 导航器 -->
          
          <!--v-if-->
          <span
            class="t-swiper-nav--horizontal t-swiper-nav__fraction t-swiper-nav--bottom-right"
          >
            <!--v-if-->
            <span>
              1/0
            </span>
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        切换按钮（controls）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: row; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          <!-- 导航器 -->
          
          <span
            class="t-swiper-nav__btn"
          >
            <span
              class="t-swiper-nav__btn--prev"
            />
            <span
              class="t-swiper-nav__btn--next"
            />
          </span>
          <!--v-if-->
          
        </div>
      </div>
      
    </div>
  </div>
  <!-- &lt;tdesign-demo-block summary="卡片模式"&gt;
      &lt;card /&gt;
    &lt;/tdesign-demo-block&gt; -->
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        垂直模式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: column; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          <!-- 导航器 -->
          
          <!--v-if-->
          <span
            class="t-swiper-nav--vertical t-swiper-nav__dots-bar t-swiper-nav--right"
          >
            
            
            <!--v-if-->
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Swiper > Swiper verticalVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: column; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    <!-- 导航器 -->
    
    <!--v-if-->
    <span
      class="t-swiper-nav--vertical t-swiper-nav__dots-bar t-swiper-nav--right"
    >
      
      
      <!--v-if-->
    </span>
    
  </div>
</div>
`;
